log
Wed Mar 23 13:56:23 UTC 2022: 
 tests:  0|6
total_score: 0/70
b3d31bf
Wed Mar 23 14:06:10 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
152c8c7
Wed Mar 23 14:14:12 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
875b4c5
Wed Mar 23 14:21:39 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3c858cd
Wed Mar 23 14:22:16 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d7b7080
Wed Mar 23 14:32:36 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
f39039f
Wed Mar 23 14:33:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
fa87828
Wed Mar 23 14:35:28 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 35/70
0ed1b97
Wed Mar 23 14:56:13 UTC 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:82:14: error: invalid initializer
     Node n = list->current->next;
              ^~~~
list.c:83:6: error: invalid type argument of ‘->’ (have ‘Node {aka struct Node}’)
     n->prev = x;
      ^~
Compilation failed
da92b82
Wed Mar 23 14:56:41 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 35/70
5cfb869
Wed Mar 23 14:59:28 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 35/70
36ea01d
Wed Mar 23 15:02:06 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1f179c1
